[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Model/Labels/Register.tscn" type="PackedScene" id=3]
[ext_resource path="res://Model/Labels/LoginHeader.tscn" type="PackedScene" id=4]
[ext_resource path="res://Model/Labels/LogIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/Screens_Randy/LoginScreen.gd" type="Script" id=6]
[ext_resource path="res://Model/Labels/ForgotPassword.tscn" type="PackedScene" id=7]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="LoginScreen" instance=ExtResource( 1 )]
margin_right = -3.0
script = ExtResource( 6 )

[node name="MarginContainer" parent="TextureRect" index="0"]
anchor_top = 0.00166151
anchor_bottom = 1.00166
margin_left = 2.0
margin_top = -2.65833
margin_right = 0.0
margin_bottom = -8.65637
rect_scale = Vector2( 0.825, 0.825 )

[node name="ColorRect" parent="TextureRect/MarginContainer" index="0"]
material = SubResource( 1 )
margin_right = 1340.0
margin_bottom = 1124.0

[node name="MarginContainer" parent="TextureRect/MarginContainer" index="1"]
margin_right = 1340.0
margin_bottom = 1124.0

[node name="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer" index="0"]
margin_right = 990.0
margin_bottom = 924.0
custom_constants/separation = 190
alignment = 2

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="0"]
margin_top = 218.0
margin_right = 940.0
margin_bottom = 344.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="0"]
margin_right = 386.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Email Address: "
align = 2

[node name="LineEdit" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="1"]
margin_left = 406.0
margin_right = 906.0
margin_bottom = 58.0
rect_min_size = Vector2( 500, 0 )

[node name="Label2" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="2"]
margin_top = 68.0
margin_right = 386.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Password: "
align = 2

[node name="LineEdit2" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="3"]
margin_left = 406.0
margin_top = 68.0
margin_right = 906.0
margin_bottom = 126.0

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_top = 534.0
margin_right = 940.0
margin_bottom = 624.0
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="LoginButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MarginContainer" index="0" instance=ExtResource( 5 )]
margin_left = 250.0
margin_top = 0.0
margin_right = 690.0
margin_bottom = 90.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="2"]
margin_top = 814.0
margin_right = 940.0
margin_bottom = 874.0
custom_constants/separation = 100

[node name="RegButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 360.0
margin_bottom = 60.0

[node name="ForgotPassButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 7 )]
margin_left = 460.0
margin_top = 0.0
margin_right = 940.0
margin_bottom = 60.0

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

[node name="Header" parent="." index="4" instance=ExtResource( 4 )]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/RegButton" to="." method="_on_RegButton_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ForgotPassButton" to="." method="_on_ForgotPassButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
